Chapter 2: Added debug script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Online shop app - Vitus Balazs - .msg Career Start 2024",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:debug": "node index.js --inspect-brk"
   },
   "author": "Vitus Balazs",
   "license": "ISC"
